--- a/index.html
+++ b/index.html
@@ -1,184 +1,83 @@
-<!doctype html>
-<html lang="es" ng-app="appHome">
+<!DOCTYPE html>
+<html>
 	<head>
-	    <title>Listar Datos</title>
-	    <meta charset="utf-8"/>
-	    <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css" /> -->
-	    <link rel="stylesheet" type="text/css" href="css/style.css" />
-	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-	    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css" />
-	</head>
-	<body>
-		<section class="container-fluid" ng-controller="appCtrlClients">
-			<section class="row">
-				<nav class="navbar nav nav-pills flex-column flex-sm-row">
-					<a class="flex-sm-fill nav-link active" active="on" data-toggle="tab" href="#clientsActive" role="tab">Actives</a>
-					<a class="flex-sm-fill nav-link" active="off" data-toggle="tab" href="#clientsInactive" role="tab">Inactives</a>
-				</nav>
-				<div class="tab-content">
-					<div class="tab-pane active" id="clientsActive" role="tabpanel">
-						<section>
-							<article>
-								<h1>Active Clients</h1>
-							</article>
-							<ul>
-								<li ng-repeat="list in clientsAct">
-									<h2>Id: {{ list.id }}</h2>
-									<h3>Status: {{ list.isActive }}</h3>
-									<p><span>Name:</span> {{ list.name }}</p>
-									<p><span>Age:</span> {{ list.age }}</p>
-									<p><span>Gender:</span> {{ list.gender }}</p>
-									<p><span>Phone:</span> {{ list.phone }}</p>
-									<p><span>Email:</span> {{ list.email }}</p>
-									<h2>Customer Friends List</h2>
-								</li>
-							</ul>
-						</section>
-						<section>
-							<ul>
-								<li ng-repeat="list in clientsAct.friends">
-									<h2>Id:{{ list.id }}</h2>
-									<p><span>Name:</span> {{ list.name }}</p>
-								</li>
-							</ul>
-						</section>
-						<section>
-							<ul>
-								<li ng-repeat="myMakersAct in markersAct">
-									<h2>Customer Location</h2>
-									<ng-map zoom="{{myMakersAct.zoom}}" center="[{{myMakersAct.latitude}} , {{myMakersAct.longitude}}]">
-										<marker position="[{{myMakersAct.latitude}} , {{myMakersAct.longitude}}]" />
-										<shape name="circle" radius="400" center="[{{myMakersAct.latitude}} , {{myMakersAct.longitude}}]" radius="4000" />
-										<control name="overviewMap" opened="true" />
-									</ng-map>
-								</li>
-							</ul>
-						</section>
-					</div>
-					<div class="tab-pane active" id="clientsInactive" role="tabpanel">
-						<section>
-							<h1>Inactive Clients</h1>
-							<ul>
-								<li ng-repeat="list in clientsInc">
-									<h2>Id: {{ list.id }}</h2>
-									<h3>Status: {{ list.isActive }}</h3>
-									<p><span>Name:</span> {{ list.name }}</p>
-									<p><span>Age:</span> {{ list.age }}</p>
-									<p><span>Gender:</span> {{ list.gender }}</p>
-									<p><span>Phone:</span> {{ list.phone }}</p>
-									<p><span>Email:</span> {{ list.email }}</p>
-									<h2>Customer Friends List</h2>
-								</li>
-							</ul>
-						</section>
-						<section>
-							<ul>
-								<li ng-repeat="list in clientsInc.friends">
-									<h2>Id:{{ list.id }}</h2>
-									<p><span>Name:</span> {{ list.name }}</p>
-								</li>
-							</ul>
-						</section>
-						<section>
-							<ul>
-								<li ng-repeat="myMakersInc in markersInc">
-									<h2>Customer Location</h2>
-									<ng-map zoom="{{myMakersInc.zoom}}" center="[{{myMakersInc.latitude}} , {{myMakersInc.longitude}}]">
-										<marker position="[{{myMakersInc.latitude}} , {{myMakersInc.longitude}}]" />
-										<shape name="circle" radius="400" center="[{{myMakersInc.latitude}} , {{myMakersInc.longitude}}]" radius="4000" />
-										<control name="overviewMap" opened="true" />
-									</ng-map>
-								</li>
-							</ul>
-						</section>	
-					</div>
-				</div>
-			</section>
-		</section>
-		<!-- <section ng-controller="appCtrlClients">
-			<section>
-				<article>
-					<h1>Active Clients</h1>
-				</article>
-				<ul>
-					<li ng-repeat="list in clientsAct">
-						<h2>Id: {{ list.id }}</h2>
-						<h3>Status: {{ list.isActive }}</h3>
-						<p><span>Name:</span> {{ list.name }}</p>
-						<p><span>Age:</span> {{ list.age }}</p>
-						<p><span>Gender:</span> {{ list.gender }}</p>
-						<p><span>Phone:</span> {{ list.phone }}</p>
-						<p><span>Email:</span> {{ list.email }}</p>
-						<h2>Customer Friends List</h2>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<ul>
-					<li ng-repeat="list in clientsAct.friends">
-						<h2>Id:{{ list.id }}</h2>
-						<p><span>Name:</span> {{ list.name }}</p>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<ul>
-					<li ng-repeat="myMakersAct in markersAct">
-						<h2>Customer Location</h2>
-						<ng-map zoom="{{myMakersAct.zoom}}" center="[{{myMakersAct.latitude}} , {{myMakersAct.longitude}}]">
-							<marker position="[{{myMakersAct.latitude}} , {{myMakersAct.longitude}}]" />
-							<shape name="circle" radius="400" center="[{{myMakersAct.latitude}} , {{myMakersAct.longitude}}]" radius="4000" />
-							<control name="overviewMap" opened="true" />
-						</ng-map>
-					</li>
-				</ul>
-			</section>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<title>AngularJS PHP CRUD (Create, Read, Update, Delete) using Bootstrap Modal</title>
+		<script src="resources/js/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		<script src="resources/js/jquery.dataTables.min.js"></script>
+		<script src="resources/js/angular-datatables.min.js"></script>
+		<script src="resources/js/bootstrap.min.js"></script>
+		<script src="resources/js/app.js"></script>
+		<link rel="stylesheet" href="resources/css/bootstrap.min.css">
+		<link rel="stylesheet" href="resources/css/datatables.bootstrap.css">
 		
-			<section>
-				<h1>Inactive Clients</h1>
-				<ul>
-					<li ng-repeat="list in clientsInc">
-						<h2>Id: {{ list.id }}</h2>
-						<h3>Status: {{ list.isActive }}</h3>
-						<p><span>Name:</span> {{ list.name }}</p>
-						<p><span>Age:</span> {{ list.age }}</p>
-						<p><span>Gender:</span> {{ list.gender }}</p>
-						<p><span>Phone:</span> {{ list.phone }}</p>
-						<p><span>Email:</span> {{ list.email }}</p>
-						<h2>Customer Friends List</h2>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<ul>
-					<li ng-repeat="list in clientsInc.friends">
-						<h2>Id:{{ list.id }}</h2>
-						<p><span>Name:</span> {{ list.name }}</p>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<ul>
-					<li ng-repeat="myMakersInc in markersInc">
-						<h2>Customer Location</h2>
-						<ng-map zoom="{{myMakersInc.zoom}}" center="[{{myMakersInc.latitude}} , {{myMakersInc.longitude}}]">
-							<marker position="[{{myMakersInc.latitude}} , {{myMakersInc.longitude}}]" />
-							<shape name="circle" radius="400" center="[{{myMakersInc.latitude}} , {{myMakersInc.longitude}}]" radius="4000" />
-							<control name="overviewMap" opened="true" />
-						</ng-map>
-					</li>
-				</ul>
-			</section>
-		</section> -->
-		<footer>
-			&copy;Copy Right Jesus Escalona 
-		</footer>
+	</head>
+	<body ng-app="crudApp" ng-controller="crudController">
+		
+		<div class="container" ng-init="fetchData()">
+			<br />
+				<h3 align="center">AngularJS PHP CRUD (Create, Read, Update, Delete) using Bootstrap Modal</h3>
+			<br />
+			<div class="alert alert-success alert-dismissible" ng-show="success" >
+				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+				{{successMessage}}
+			</div>
+			<div align="right">
+				<button type="button" name="add_button" ng-click="addData()" class="btn btn-success">Add</button>
+			</div>
+			<br />
+			<div class="table-responsive" style="overflow-x: unset;">
+				<table datatable="ng" dt-options="vm.dtOptions" class="table table-bordered table-striped">
+					<thead>
+						<tr>
+							<th>First Name</th>
+							<th>Last Name</th>
+							<th>Edit</th>
+							<th>Delete</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="name in namesData">
+							<td>{{name.first_name}}</td>
+							<td>{{name.last_name}}</td>
+							<td><button type="button" ng-click="fetchSingleData(name.id)" class="btn btn-warning btn-xs">Edit</button></td>
+							<td><button type="button" ng-click="deleteData(name.id)" class="btn btn-danger btn-xs">Delete</button></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div class="modal fade" tabindex="-1" role="dialog" id="crudmodal">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<form method="post" ng-submit="submitForm()">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title">{{modalTitle}}</h4>
+						</div>
+						<div class="modal-body">
+							<div class="alert alert-danger alert-dismissible" ng-show="error" >
+								<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+								{{errorMessage}}
+							</div>
+							<div class="form-group">
+								<label>Enter First Name</label>
+								<input type="text" name="first_name" ng-model="first_name" class="form-control" />
+							</div>
+							<div class="form-group">
+								<label>Enter Last Name</label>
+								<input type="text" name="last_name" ng-model="last_name" class="form-control" />
+							</div>
+						</div>
+						<div class="modal-footer">
+							<input type="hidden" name="hidden_id" value="{{hidden_id}}" />
+							<input type="submit" name="submit" id="submit" class="btn btn-info" value="{{submit_button}}" />
+							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</body>
-	<script src="js/angular.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/ng-map.min.js"></script>
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/scripts.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAG45aDINdqzFMDrSJNuRjVDz1OEXu-fwI"></script>
 </html>
